--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Generates random user data",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "node src/server.ts"
   },
   "repository": {
     "type": "git",
