--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Generates random user data",
   "main": "dist/server.ts",
   "scripts": {
-    "start": "node dist/server.js",
-    "test": "node src/server.ts"
+    "start": "nodemon src/server.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
