--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,18 @@
     "builds": [
         {
             "src": "dist/server.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "dist/index.js"
         }
     ]
 }
