--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/index.js"
+            "dest": "dist/server.js"
         }
     ]
 }
