get routes done

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generates random user data",
   "main": "dist/server.ts",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start": "nodemon src/server.ts",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
